# auk-firmware

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DESIGN-NOTES.md  DEVELOPMENT.md  PORTING.md  PROTOCOL.md
include/auk/app/: robot.hpp  telemetry.hpp
include/auk/control/: differential_drive.hpp  odometry.hpp  slew_limiter.hpp
include/auk/core/: command.hpp  deadline.hpp  result.hpp  ring_buffer.hpp
include/auk/hal/: hal.hpp
include/auk/power/: battery_gauge.hpp
include/auk/safety/: interlock.hpp
sim/: main.cpp  sim_board.cpp  sim_board.hpp
src/app/: robot.cpp  telemetry.cpp
src/control/: differential_drive.cpp  odometry.cpp  slew_limiter.cpp
src/core/: command.cpp
src/power/: battery_gauge.cpp
src/safety/: interlock.cpp
tests/: check.hpp  test_control.cpp  test_core.cpp  test_integration.cpp  test_safety.cpp
tools/: check-all.sh
